feat:add student promoted apis
